test/integration/bad/lang/bad_decl3.stan
functions {
    void test(real alpha, real tau, real beta, real delta) {
      real t, x = tau, beta * alpha; // this errors saying
      return;
    }
}
